objects/Copa_Event__c.object
<CustomObject>
    <description>Used to create events which will be displayed on community.</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date time of event.</description>
        <label>End Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Details__c</fullName>
        <label>Event Details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <description>Contains the event name.</description>
        <label>Event Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Time_Shown_To_Public__c</fullName>
        <description>Event time string which is shown to public.</description>
        <inlineHelpText>Filled automatically based on Start Date, End Date and Timezone of event.</inlineHelpText>
        <label>Event Time Shown To Public</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Meeting_Link_For_Email__c</fullName>
        <description>This field is used in email template for copa event registration and it populates location or meeting link based on event venue.</description>
        <formula>IF(ISPICKVAL(Venue__c, &quot;In-Person&quot;), Location__c, Meeting_Link__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location/Meeting Link For Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>Enter location for In-Person events.</inlineHelpText>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Link__c</fullName>
        <description>Meeting link for the event.</description>
        <label>Meeting Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Registration_Link__c</fullName>
        <description>Contains the registration link for the event.</description>
        <label>Registration Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Contains start date of event.</description>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <inlineHelpText>Timezone in which event is going to happen.</inlineHelpText>
        <label>Timezone</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Custom_Timezone</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <label>Venue</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Person</fullName>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Copa Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Community_Events</fullName>
        <columns>NAME</columns>
        <columns>Event_Name__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Copa_Event__c.Community_Events</value>
        </filters>
        <label>Community Events</label>
    </listViews>
    <listViews>
        <fullName>Marketing_Events</fullName>
        <columns>NAME</columns>
        <columns>Event_Name__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Copa_Event__c.Marketing_Events</value>
        </filters>
        <label>Marketing Events</label>
    </listViews>
    <nameField>
        <displayFormat>CE-{0000}</displayFormat>
        <label>Copa Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Copa Events</pluralLabel>
    <recordTypes>
        <fullName>Community_Events</fullName>
        <active>true</active>
        <description>Events which are related to community.</description>
        <label>Community Events</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marketing_Events</fullName>
        <active>true</active>
        <description>Events which are related to marketing.</description>
        <label>Marketing Events</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>End_Date_Cannot_Be_Prior_To_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c &gt; End_Date__c</errorConditionFormula>
        <errorMessage>End date should not be less then start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Registration_URL</fullName>
        <active>true</active>
        <description>Check whether the Registration URL starts with http or https</description>
        <errorConditionFormula>AND( 
    NOT(ISBLANK(Registration_Link__c)),
    NOT(BEGINS(LOWER(Registration_Link__c), &quot;https://&quot;)),
    NOT(BEGINS(LOWER(Registration_Link__c), &quot;http://&quot;))
)</errorConditionFormula>
        <errorMessage>Please provide complete URL including http or https.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Location_Required_For_In_Person_Events</fullName>
        <active>true</active>
        <errorConditionFormula>IF( AND(TEXT(Venue__c) == &apos;In-Person&apos;, ISBLANK( Location__c )), true, false)</errorConditionFormula>
        <errorMessage>Please provide the location for In-Person event.</errorMessage>
    </validationRules>
</CustomObject>